Creato con Colab

--- a/CLIP_zero_shot.ipynb
+++ b/CLIP_zero_shot.ipynb
@@ -1425,11 +1425,15 @@
         "    print(f\"Epoch {epoch + 1}, Validation loss: {total_loss/ len(val_dataloader)}; Validation accuracy: {correct_predictions / len(val_dataset)*100:.2f}%\")\n",
         "    print()\n",
         "    print(\"-----------------------------------------------------------------------------------------------\")\n",
+        "    novel_accuracy = eval(model=model, dataset=test_novel, categories=novel_classes, batch_size=32, device=device, label=\"🧠 Zero-shot evaluation on Novel Classes\")\n",
+        "    print(f\"🔍 Novel classes accuracy: {novel_accuracy*100:.2f}%\")\n",
+        "    print()\n",
+        "    print(\"-----------------------------------------------------------------------------------------------\")\n",
         "\n",
         "  return(model)\n",
         "\n",
         "model, _ = clip.load(\"ViT-B/16\", device=device)\n",
-        "model_ft_visual_layer = fine_tuning_linear_visual(model=model, train_dataset=train_base, val_dataset=val_base, categories=base_classes, lr = 0.0001, batch_size=51, num_epochs=2, device=device)\n"
+        "model_ft_visual_layer = fine_tuning_linear_visual(model=model, train_dataset=train_base, val_dataset=val_base, categories=base_classes, lr = 0.0001, batch_size=32, num_epochs=2, device=device)\n"
       ],
       "metadata": {
         "id": "ZKAQ6HtQxBkn"
