Creato con Colab

--- a/CLIP_zero_shot.ipynb
+++ b/CLIP_zero_shot.ipynb
@@ -13,13 +13,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "UzXtFjhh7iOS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8df0fa7a-aa7e-4c5d-b362-300138293566"
+        "outputId": "08195c4e-ea83-424f-cf87-4a292cc005f7"
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "QtqdSOr8qqOn"
       },
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "M_1CrUhZpVCq"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "nfq51vd8q_5a"
       },
@@ -136,13 +136,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "veGGpNDctCgR",
-        "outputId": "bd269f23-bde6-40c6-e0cb-a41c8857b968",
+        "outputId": "392a7abe-0e24-4a8e-fc51-9e01501ae1b9",
         "collapsed": true
       },
       "outputs": [
@@ -156,10 +156,13 @@
         }
       ],
       "source": [
+        "from os import name\n",
         "_, _, tmp_test = get_data()\n",
         "base_classes, novel_classes = base_novel_categories(tmp_test)\n",
         "CLASS_NAMES = [\"pink primrose\", \"hard-leaved pocket orchid\", \"canterbury bells\", \"sweet pea\", \"english marigold\", \"tiger lily\", \"moon orchid\", \"bird of paradise\", \"monkshood\", \"globe thistle\", \"snapdragon\", \"colt's foot\", \"king protea\", \"spear thistle\", \"yellow iris\", \"globe-flower\", \"purple coneflower\", \"peruvian lily\", \"balloon flower\", \"giant white arum lily\", \"fire lily\", \"pincushion flower\", \"fritillary\", \"red ginger\", \"grape hyacinth\", \"corn poppy\", \"prince of wales feathers\", \"stemless gentian\", \"artichoke\", \"sweet william\", \"carnation\", \"garden phlox\", \"love in the mist\", \"mexican aster\", \"alpine sea holly\", \"ruby-lipped cattleya\", \"cape flower\", \"great masterwort\", \"siam tulip\", \"lenten rose\", \"barbeton daisy\", \"daffodil\", \"sword lily\", \"poinsettia\", \"bolero deep blue\", \"wallflower\", \"marigold\", \"buttercup\", \"oxeye daisy\", \"common dandelion\", \"petunia\", \"wild pansy\", \"primula\", \"sunflower\", \"pelargonium\", \"bishop of llandaff\", \"gaura\", \"geranium\", \"orange dahlia\", \"pink-yellow dahlia?\", \"cautleya spicata\", \"japanese anemone\", \"black-eyed susan\", \"silverbush\", \"californian poppy\", \"osteospermum\", \"spring crocus\", \"bearded iris\", \"windflower\", \"tree poppy\", \"gazania\", \"azalea\", \"water lily\", \"rose\", \"thorn apple\", \"morning glory\", \"passion flower\", \"lotus\", \"toad lily\", \"anthurium\", \"frangipani\", \"clematis\", \"hibiscus\", \"columbine\", \"desert-rose\", \"tree mallow\", \"magnolia\", \"cyclamen\", \"watercress\", \"canna lily\", \"hippeastrum\", \"bee balm\", \"ball moss\", \"foxglove\", \"bougainvillea\", \"camellia\", \"mallow\", \"mexican petunia\", \"bromelia\", \"blanket flower\", \"trumpet creeper\", \"blackberry lily\"]\n",
         "print(\"Base Class Names:\", [(i, CLASS_NAMES[i]) for i in base_classes])\n",
+        "name_base = [CLASS_NAMES[i] for i in base_classes]\n",
+        "name_novel = [CLASS_NAMES[i] for i in novel_classes]\n",
         "print(\"Novel Class Names:\", [(i, CLASS_NAMES[i]) for i in novel_classes])"
       ]
     },
@@ -176,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "msOszMs2zRRu"
       },
@@ -230,16 +233,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sh6uLZRT7YJx",
-        "outputId": "4ff852d7-9a2a-49dd-f621-ed4c353dfdbd",
+        "outputId": "33c97338-7d92-4a97-9621-68887a459f09",
         "collapsed": true
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|███████████████████████████████████████| 335M/335M [00:07<00:00, 46.5MiB/s]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -247,14 +257,14 @@
               "Compose(\n",
               "    Resize(size=224, interpolation=bicubic, max_size=None, antialias=True)\n",
               "    CenterCrop(size=(224, 224))\n",
-              "    <function _convert_image_to_rgb at 0x780e5dfebf60>\n",
+              "    <function _convert_image_to_rgb at 0x7d7291196a20>\n",
               "    ToTensor()\n",
               "    Normalize(mean=(0.48145466, 0.4578275, 0.40821073), std=(0.26862954, 0.26130258, 0.27577711))\n",
               ")"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 12
         }
       ],
       "source": [
@@ -281,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "TVrYUYTv9ttM"
       },
@@ -310,21 +320,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uhblkvm9US4",
-        "outputId": "452d7e38-80b7-4aea-c090-45ae2f19c0ac"
+        "outputId": "e84e70b7-2652-4aa7-a81b-f9dbef177110"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "🧠 Zero-shot evaluation on Base Classes: 100%|██████████| 20/20 [00:19<00:00,  1.02it/s]\n",
-            "🧠 Zero-shot evaluation on Novel Classes: 100%|██████████| 29/29 [00:31<00:00,  1.10s/it]"
+            "🧠 Zero-shot evaluation on Base Classes: 100%|██████████| 20/20 [00:18<00:00,  1.07it/s]\n",
+            "🧠 Zero-shot evaluation on Novel Classes: 100%|██████████| 29/29 [00:35<00:00,  1.21s/it]"
           ]
         },
         {
@@ -3030,7 +3040,7 @@
       "metadata": {
         "id": "g4RuzJelmJLz"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -3045,10 +3055,6 @@
         "from torch.nn import functional as F\n",
         "from torch.cuda.amp import GradScaler, autocast\n",
         "\n",
-        "from dassl.engine import TRAINER_REGISTRY, TrainerX\n",
-        "from dassl.metrics import compute_accuracy\n",
-        "from dassl.utils import load_pretrained_weights, load_checkpoint\n",
-        "from dassl.optim import build_optimizer, build_lr_scheduler\n",
         "\n",
         "\n",
         "from clip import clip\n",
@@ -3144,7 +3150,7 @@
         "        self.name_lens = name_lens\n",
         "        self.class_token_position = class_token_position\n",
         "\n",
-        "  def construct_prompts(self, ctx, prefix, suffix, label=None):\n",
+        "    def construct_prompts(self, ctx, prefix, suffix, label=None):\n",
         "        # dim0 is either batch_size (during training) or n_cls (during testing)\n",
         "        # ctx: context tokens, with shape of (dim0, n_ctx, ctx_dim)\n",
         "        # prefix: the sos token, with shape of (n_cls, 1, ctx_dim)\n",
@@ -3188,7 +3194,7 @@
       "metadata": {
         "id": "xH78D_nX6wG9"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -3225,7 +3231,7 @@
       "metadata": {
         "id": "uFAd8yhXyLyM"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -3239,21 +3245,28 @@
         "  train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
         "  val_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
         "\n",
-        "  model = model.float()\n",
+        "  model = OurCLIP(\n",
+        "        classnames=name_base, n_ctx=n_ctx, ctx_init=ctx_init, class_token_position=class_token_position, csc=csc\n",
+        "    ).to(device)\n",
+        "\n",
+        "  print(\"Turning off gradients in both the image and the text encoder\")\n",
+        "  for name, param in model.named_parameters():\n",
+        "        if \"prompt_learner\" not in name:\n",
+        "            param.requires_grad_(False)\n",
+        "\n",
+        "  print(f\"Total parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
+        "  print(f\"Total trainable parameters: {sum(p.numel() for p in model.parameters() if p.requires_grad):,}\")\n",
         "\n",
         "  visual_projection = model.visual.proj\n",
         "  text_projection = model.text_projection\n",
         "\n",
-        "  # Freeze all parameters in the model\n",
-        "  for name, param in model.named_parameters():\n",
-        "    if \"ln\" not in name:  # Check for LayerNorm parameters\n",
-        "        param.requires_grad = False\n",
         "\n",
-        "# Verify which parameters are trainable\n",
         "  trainable_params = [param for name, param in model.named_parameters() if param.requires_grad]\n",
         "\n",
         "  criterion = torch.nn.CrossEntropyLoss()\n",
-        "  optimizer = Adam(trainable_params, lr=lr)\n",
+        "  optimizer = Adam(trainable_params, lr=0.002, momentum = 0.9, weight_decay=0.0005)\n",
+        "\n",
+        "# Verify which parameters are trainable\n",
         "\n",
         "  contig_cat2idx = {cat: idx for idx, cat in enumerate(categories)}\n",
         "\n",
